--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest",
-      "eslint-config-react-app"
+      "react-app/jest"
     ]
   },
   "browserslist": {
